--- a/phone/css/master_b-wzorcowa.css
+++ b/phone/css/master_b-wzorcowa.css
@@ -1,1 +1,1 @@
-#u1446-4{border-style:solid;border-width:3px;border-color:#FFFFFF;background-color:transparent;color:#FFFFFF;line-height:48px;font-size:40px;text-align:center;}#u1490-4{background-color:transparent;text-align:center;color:#FFFFFF;}#u1491,#u1492{background-color:#7F7F7F;}
+#u1446-4{border-style:solid;border-width:3px;border-color:#FFFFFF;background-color:transparent;color:#FFFFFF;font-size:40px;text-align:center;line-height:48px;}#u1490-4{background-color:transparent;text-align:center;color:#FFFFFF;}#u1491,#u1492{background-color:#7F7F7F;}
